# DreamSpeaker

./: .gitignore  README.md  keys.env.example  pyproject.toml
android/: gradlew  gradlew.bat  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/dreamspeaker/: MainActivity.kt
android/app/src/main/java/com/dreamspeaker/audio/: AudioRecorder.kt
android/app/src/main/java/com/dreamspeaker/network/: DreamUploader.kt
android/app/src/main/java/com/dreamspeaker/ui/: RecordScreen.kt  SettingsScreen.kt
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
dreamspeaker/: app.py  claude_dream.py  notion_poster.py  transcriber.py  util.py
