[project]
name = "dreamspeaker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.84.0",
    "faster-whisper>=1.2.1",
    "flask>=3.1.3",
    "requests>=2.32.5",
]

[project.scripts]
dreamspeaker = "dreamspeaker.app:run"
